# erebus

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  chalkboard.txt  instructions-dev.txt
crates/erebus-io/: Cargo.toml
crates/erebus-io/src/: compression.rs  format.rs  lib.rs  prelude.rs  read.rs  write.rs
crates/erebus-io/src/utils/: bitmap.rs  mod.rs
crates/erebus-io/src/vector_data/: mod.rs  read.rs  write.rs
crates/erebus-io/src/vector_data/f64/: mod.rs  read.rs  write.rs
crates/erebus-io/src/vector_data/f64/factored/: format.rs  mod.rs  read.rs  write.rs
crates/erebus-io/src/vector_data/f64/raw/: format.rs  read.rs  write.rs
crates/erebus-io/src/writer/: writer.rs
crates/erebus-io/tests/: compile_vector_data.rs
crates/erebus-io/tests/vector_data/f64/: factored.rs  mod.rs  raw.rs
crates/erebus-io/tests/vector_data/f64/output/: factored_test1.erebus  factored_test2.erebus  factored_test3.erebus  factored_test4.erebus  (+6 more)
crates/erebus-time/: Cargo.toml
crates/erebus-time/data/calendars/nyse/: nyse_calendar_full.csv  nyse_holidays.csv
crates/erebus-time/src/: lib.rs  prelude.rs
crates/erebus-time/src/calendar/: mod.rs
crates/erebus-time/src/calendar/gregorian/: calendar.rs  days.rs  leap.rs  mod.rs  months.rs  week.rs  weekday.rs  weekend.rs
crates/erebus-time/src/date/: convert.rs  date.rs  extract.rs  indexing.rs  mod.rs  parse.rs  validate.rs  validity.rs  weekday.rs  weekend.rs
crates/erebus-time/tests/: compile_all.rs
crates/erebus-time/tests/date/: date.rs  extract.rs  indexing.rs  mod.rs  validity.rs  weekday.rs  weekend.rs
(+159 files in other folders)
