[package]
name = "erebus-io"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["Abdallah Dar <dar.abdallah.a@gmail.com>"]

[dependencies]
erebus-core = { path = "../erebus-core", features = ["internal"], version = "0.1.0" }
rand = "0.8"
visibility = "0.1"
zstd = "0.13"
lz4_flex = "0.11"

[dev-dependencies]
tempfile = "3.10"
rand = "0.8"

[features]
internal = []