[package]
name = "erebus-time"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["Abdallah Dar <dar.abdallah.a@gmail.com>"]

[dependencies]
erebus-core = { path = "../erebus-core", features = ["internal"], version = "0.1.0" }
erebus-io = { path = "../erebus-io", features = ["internal"], version = "0.1.0" }
#erebus-expr = { path = "../erebus-expr" }
#bitvec = "1.0"
ordered-float = "4.2"
rayon = "1.8"
ahash = "0.8"
visibility = "0.1"
rand = "0.8"

[features]
internal = []